--- a/navigation.html
+++ b/navigation.html
@@ -37,7 +37,7 @@
     </div>
     <div class="ending">
       <ul class="ul"> 
-      <li>LOG IN / DIRECTIONS</li>
+      <li>Log In/Directions</li>
       <li>View Cart<img src="https://ak8.picdn.net/shutterstock/videos/1006608868/thumb/7.jpg" height="20"></li>
     </ul>
     </div>
